--- a/Front End Assets/scss/layouts/_three-equal-col.scss
+++ b/Front End Assets/scss/layouts/_three-equal-col.scss
@@ -1,17 +1,22 @@
 ﻿@import "../variables";
 @import "../mixins";
 
-.three-equal-col { 
+.three-equal-col {
     @include make-row;
 
+    @media #{$media-desktop-view} {
+        display: flex;
+        justify-content: space-between;
+    }
+
     > div {
-        @include make-md-column(4);
+        @include make-md-column(3);
 
         @media #{$media-mobile-view} {
-            margin-top:$v-spacing-sm;
+            margin-top: $v-spacing-sm;
 
             &:first-child {
-                margin-top:0;
+                margin-top: 0;
             }
         }
     }
