--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -20,6 +20,10 @@
 @import 'modules/text-image-video-hero';    
 @import 'modules/timeline'; 
 @import 'modules/three-column-callout'; 
+@import 'modules/three-column-image'; 
+@import 'modules/text-with-circle-images'; 
+@import 'modules/text-left-image-right'; 
+@import 'modules/content-callout-hero'; 
 
 
   
