--- a/Front End Assets/html/templates/partials/logo-nav.html
+++ b/Front End Assets/html/templates/partials/logo-nav.html
@@ -1,13 +1,21 @@
-<div class="logo-nav">
-    <div class="logo">
-        <a href="/"><img src="../images/rif-logo.png"/></a>
+<div class="container">
+    <div class="logo-nav">
+        <div class="logo">
+            <a href="/">
+                <img src="../images/rif-logo.png" class="desktop" />
+                <img src="../images/rif-logo-mobile.png" class="mobile" />
+            </a>
+        </div>
+        <div class="mobile-nav-toggle">
+            <span></span>
+        </div>
+        <nav class="main-navigation">
+            <ul>
+                <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
+                <li><a href="#" title="Get Involved">Get Involved</a></li>
+                <li><a href="#" title="About Us">About Us</a></li>
+                <li class="button"><a href="#" title="Donate">Donate</a></li>
+            </ul>
+        </nav>
     </div>
-    <nav class="main-navigation">
-        <ul>
-            <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
-            <li><a href="#" title="Get Involved">Get Involved</a></li>
-            <li><a href="#" title="About Us">About Us</a></li>
-            <li class="button"><a href="#" title="Donate">Donate</a></li>
-        </ul>
-    </nav>
 </div>
