--- a/Front End Assets/scss/global/_header.scss
+++ b/Front End Assets/scss/global/_header.scss
@@ -1,2 +1,12 @@
 ﻿@import "../variables";
 @import "../mixins";
+
+
+header {
+    background:$white; 
+    left:0;
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index:1000;
+}
