updated HTML pages, removed unnecessary modules markup, everything is in templates/partial. updated readme

--- a/Front End Assets/html/templates/partials/donation-page-tabs.html
+++ b/Front End Assets/html/templates/partials/donation-page-tabs.html
@@ -1,8 +1,5 @@
-{% extends "shell.html" %}
-{% block content %}
-
 <div class="donation module">
-    
+
     {% include "partials/rif-book.html" %}
 
     <h1 class="rif-book-margin-top">Love Books?<br>Help kids love them too.</h1>
@@ -21,11 +18,14 @@
         </ul>
         <div id="tabs-1">
             <div class="row">
-                <div class="col-md-4"><a href="#">$10</a>
+                <div class="col-md-4">
+                    <a href="#">$10</a>
                 </div>
-                <div class="col-md-4"><a href="#">$25</a>
+                <div class="col-md-4">
+                    <a href="#">$25</a>
                 </div>
-                <div class="col-md-4"><a href="#">$50</a>
+                <div class="col-md-4">
+                    <a href="#">$50</a>
                 </div>
             </div>
             <div class="row">
@@ -42,11 +42,14 @@
 
         <div id="tabs-2">
             <div class="row">
-                <div class="col-md-4"><a href="#">$10</a>
+                <div class="col-md-4">
+                    <a href="#">$10</a>
                 </div>
-                <div class="col-md-4"><a href="#">$25</a>
+                <div class="col-md-4">
+                    <a href="#">$25</a>
                 </div>
-                <div class="col-md-4"><a href="#">$50</a>
+                <div class="col-md-4">
+                    <a href="#">$50</a>
                 </div>
             </div>
             <div class="row">
@@ -63,11 +66,14 @@
 
         <div id="tabs-3">
             <div class="row">
-                <div class="col-md-4"><a href="#">$10</a>
+                <div class="col-md-4">
+                    <a href="#">$10</a>
                 </div>
-                <div class="col-md-4"><a href="#">$25</a>
+                <div class="col-md-4">
+                    <a href="#">$25</a>
                 </div>
-                <div class="col-md-4"><a href="#">$50</a>
+                <div class="col-md-4">
+                    <a href="#">$50</a>
                 </div>
             </div>
             <div class="row">
@@ -83,4 +89,3 @@
         </div>
     </div>
 </div><!-- /.donation -->
-{% endblock %}
