--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -4,29 +4,27 @@
 @import 'global/logo-nav';
 @import 'global/header';
 @import 'global/main-navigation';
-@import 'global/footer'; 
-@import 'global/bootstrap-modal'; 
-@import 'global/responsive-iframe';  
-@import 'global/videos';  
- 
+@import 'global/footer';
+@import 'global/bootstrap-modal';
+@import 'global/responsive-iframe';
+@import 'global/videos';
+
 /* layouts */
-@import 'layouts/two-equal-col';  
-@import 'layouts/three-equal-col';  
+@import 'layouts/two-equal-col';
+@import 'layouts/three-equal-col';
 
 /* modules */
-@import 'modules/rif-book'; 
+@import 'modules/rif-book';
 @import 'modules/home-hero';
-@import 'modules/social-media-list';  
-@import 'modules/text-image-video-hero'; 
-@import 'modules/large-text-image-video-hero';   
-@import 'modules/timeline'; 
-@import 'modules/three-column-callout'; 
-@import 'modules/three-column-image'; 
-@import 'modules/text-with-circle-images'; 
-@import 'modules/text-left-image-right'; 
-@import 'modules/content-callout-hero';  
-@import 'modules/three-column-circle-image-text';  
-@import 'modules/donation-page-tabs'; 
- 
-
-  
+@import 'modules/social-media-list';
+@import 'modules/text-image-video-hero';
+@import 'modules/large-text-image-video-hero';
+@import 'modules/timeline';
+@import 'modules/three-column-callout';
+@import 'modules/three-column-image';
+@import 'modules/text-with-circle-images';
+@import 'modules/text-left-image-right';
+@import 'modules/content-callout-hero';
+@import 'modules/three-column-circle-image-text';
+@import 'modules/donation-page-tabs';
+@import 'modules/programs-grid';
