--- a/Front End Assets/html/templates/partials/logo-nav.html
+++ b/Front End Assets/html/templates/partials/logo-nav.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="logo-nav">
         <div class="logo">
-            <a href="/">
+            <a href="index.html">
                 <img src="../images/rif-logo.png" class="desktop" />
                 <img src="../images/rif-logo-mobile.png" class="mobile" />
             </a>
@@ -11,10 +11,10 @@
         </div>
         <nav class="main-navigation">
             <ul>
-                <li><a href="#" title="Programs and Initiatives">Programs and Initiatives</a></li>
-                <li><a href="#" title="Get Involved">Get Involved</a></li>
+                <li><a href="programs.html" title="Programs and Initiatives">Programs and Initiatives</a></li>
+                <li><a href="community.html" title="Get Involved">Get Involved</a></li>
                 <li><a href="#" title="About Us">About Us</a></li>
-                <li class="button"><a href="#" title="Donate">Donate</a></li>
+                <li class="button"><a href="donation.html" title="Donate">Donate</a></li>
             </ul>
         </nav>
     </div>
