--- a/Front End Assets/scss/_variables.scss
+++ b/Front End Assets/scss/_variables.scss
@@ -8,6 +8,7 @@ $light-grey: #b7c2c7;
 $light-blue: #72c2e6;
 $light-green: #9aedd8;
 $green: #58877b;
+$orange:#ffaa33;
 
 // COLOR OVERLAYS
 $overlay-orange: rgba(255,170,51,0.5);
