--- a/Front End Assets/scss/rif.scss
+++ b/Front End Assets/scss/rif.scss
@@ -28,3 +28,7 @@
 @import 'modules/three-column-circle-image-text';
 @import 'modules/donation-page-tabs';
 @import 'modules/programs-grid';
+@import 'modules/image-video-text-hero';
+@import 'modules/large-image-video-text-hero';
+@import 'modules/gallery';
+@import 'modules/circle-text';
